--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <meta name="google-site-verification" content="izgPrUC2JdAU3r7opSzqV7dBPTEh9i4JXvsQT0MVTgw" />
     <meta charset="UTF-8" />
     <meta name="referrer" content="no-referrer" />
     <meta property="og:site_name" content="TikTok Downloader" />
@@ -38,19 +40,7 @@
     <title>TikTok Downloader</title>
     <link rel="stylesheet" href="assets/css/style.css" />
     <script src="assets/js/script.js"></script>
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=GT-NCHFV7JC"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "GT-NCHFV7JC");
-    </script>
+    
   </head>
   <body>
     <header>
