--- a/index.html
+++ b/index.html
@@ -40,7 +40,20 @@
     <title>TikTok Downloader</title>
     <link rel="stylesheet" href="assets/css/style.css" />
     <script src="assets/js/script.js"></script>
-    
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=GT-NCHFV7JC"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "GT-NCHFV7JC");
+    </script>
   </head>
   <body>
     <header>
