--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<link rel="canonical" href="https://tiktokdownloaderssstik.github.io/" />
 
     <meta name="google-site-verification" content="izgPrUC2JdAU3r7opSzqV7dBPTEh9i4JXvsQT0MVTgw" />
     <meta charset="UTF-8" />
